--- a/css/style.css
+++ b/css/style.css
@@ -55,32 +55,34 @@ p {
 }
 
 /* specific styling */
-/* mobile first response */
+/* mobile first approach */
 
-.grid__container {
+.grid-container {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-areas: 
-        "header__block"
-        "grow__together__block"
-        "flowing__conversations__block"
-        "your__users__block"
-        "footer__block";
+        "header-block"
+        "grow-together-block"
+        "flowing-conversations-block"
+        "your-users-block"
+        "footer-block";
     gap: 4rem;
     justify-items: center;
     /* style 1st component - mobile */
     min-width: 37.5rem;   
 }
 
-.header_block {
+/* style 1st component */
+
+.header-block {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-areas: 
-    "header__block__company--logo header__block__trial--button"
-    "header__block_product--title header__block_product--title"
-    "header__block_product--info header__block_product--info"
-    "header__block__product__trial--button header__block__product__trial--button"
-    "header__block__product--illustration header__block__product--illustration";
+    "header-block__company-logo header-block__trial-button"
+    "header-block__product-title header-block__product-title"
+    "header-block__product-info header-block__product-info"
+    "header-block__product-trial-button header-block__product-trial-button"
+    "header-block__product-illustration header-block__product-illustration";
     gap: 4rem;
     align-items: center;
     padding: 2rem;
@@ -90,11 +92,11 @@ p {
     background-position: 0 -10rem;
 }
 
-.header__block__company--logo {
+.header-block__company-logo {
     width: 70%;
 }
 
-.header__block__trial--button {
+.header-block__trial-button {
     width: 75%;
     background-color: var(--white);
     border: none;
@@ -103,23 +105,23 @@ p {
     font-family: var(--ff-primary);
     font-weight: var(==fw-700);
     justify-self: end;
-    padding: 0.6rem 0;    
+    padding: 0.6rem 0;
 }
 
-.header__block__product--title {
+.header-block__product-title {
     font-size: 2.6rem;
     text-align: center;
     margin-top: 6rem;
 }
 
-.header__block__product--info {
+.header-block__product-info {
     font-famiiy: var(--ff-primary);
     text-align: center;
     width: 90%;
     margin: 0 auto;
 }
 
-.header__block__product__trial--button {
+.header-block__product-trial-button {
     width: 70%;
     margin: 0 auto;
     font-size: 1.2rem;
@@ -133,9 +135,9 @@ p {
 
 /* style 2nd, 3rd & 4th component - mobile */
 
-.grow__together__block,
-.flowing__conversations__block,
-.your__users__block {
+.grow-together-block,
+.flowing-conversations-block,
+.your-users-block {
     width: 90%;
     display: grid;
     grid-template-columns: 1fr;
@@ -146,44 +148,193 @@ p {
     border-radius: 2rem;
 }
 
-.grow__together__block {
+.grow-together-block {
     grid-template-areas: 
-        "grow__together__block--feature-image"
-        "grow__together__block--feature-title"
-        "grow__together__block--feature-info";   
+        "grow-together-block__feature-image"
+        "grow-together-blo6ck__feature-title"
+        "grow-together-block__feature-info";   
 }
 
-.flowing__conversations__block {
+.flowing-conversations-block {
     grid-template-areas: 
-        "flowing__conversations__block--feature-image"
-        "flowing__conversations__block--feature-title"
-        "flowing__conversations__block--feature-info";
+        "flowing-conversations-block__feature-image"
+        "flowing-conversations-block__feature-title"
+        "flowing-conversations-block__feature-info";
 }
 
-.your__users__block {
+.your-users-block {
     grid-template-areas:
-        "your__users__block--feature-logo"
-        "your__users__block--feature-image"
-        "your__users__block--feature-info";
+        "your-users-block__feature-image"
+        "your-users-block__feature-title"
+        "your-users-block__feature-info";
 }
 
-.grow__together__block--feature-image,
-.flowing__conversations__block--feature-image,
-.your__users__block--feature-image {
+.grow-together-block__feature-image,
+.flowing-conversations-block__feature-image,
+.your-users-block__feature-image {
     width: 85%;
     margin-bottom: 4rem;
 }
 
-.grow__together__block--feature-title,
-.flowing__conversations__block--feature-title,
-.your__users__block--feature-title {
+.grow-together-block__feature-title,
+.flowing-conversations-block__feature-title,
+.your-users-block__feature-title {
     font-size: 2.4rem;
 }
 
-.grow__together__block--feature-info,
-.flowing__conversations__block--feature-info,
-.your__users__block--feature-info {
+.grow-together-block__feature-info,
+.flowing-conversations-block__feature-info,
+.your-users-block__feature-info {
     text-align: center;
     font-family: var(--ff-primary);
     color: var(--clr-neutral-grayish-blue);
 }
+
+/* style 5th component - mobile */
+
+.footer-block {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+        "footer-block__trial-info"
+        "footer-block__company-logo"
+        "footer-block__location-details"
+        "footer-block__phone-details"
+        "footer-block__email-details"
+        "footer-block__about-us"
+        "footer-block__what-we-do"
+        "footer-block__faq"
+        "footer-block__career"
+        "footer-block__blog"
+        "footer-block__contact-us"
+        "footer-block-social-component"
+        "footer-block__copyriht";
+      gap: 1.5rem;
+      padding: 4rem 1rem;
+      background: linear-gradient(
+        to top,
+        var(--clr-neutral-very-dark-cyan),
+        var(--clr-neutral-very-dark-cyan)
+        );
+      no-repeat 0 15.5rem;
+}
+
+.footer-block__trial-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+    padding: 4rem 0;
+    border-radius: 2rem;
+    box-shadow: 0 0 4px var(--clr-neutral-grayish-blue);
+    margin-bottom: 6rem;
+    background-color: var(--white);
+}
+
+.footer-block-trial-info__button {
+    width: 60%;
+    background-color: var(--clr-primary-pink);
+    color: var(--clr-neutral-very-pale-cyan);
+    border: none;
+    border-radius: 3rem;
+    font-size: 1.2rem;
+    font-family: var(--ff-primary);
+    padding: 1.25rem 0;
+}
+
+.footer-block__company-logo {
+    width: 50%;
+    margin-bottom: 1.5rem;
+}
+
+.footer-block__location-details {
+    display: flex;
+    align-items: flex-start;
+    gap: 2rem;
+    margin-bottom: 1.5rem;
+}
+
+.footer-block__phone-details,
+.footer-block__email-details {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    margin-bottom: 1.5rem;
+}
+
+.footer-block-location-details__icon {
+    width: 15%;
+    margin-top: 0.5rem;
+}
+
+.footer-block-location-details__info,
+.footer-block-phone-details__info,
+.footer-block-email-details__info {
+    color: var(--clr-neutral-very-pale-cyan);
+    font-family: var(--ff-primary);
+    padding-right: 2rem;
+}
+
+.footer-block__about-us,
+.footer-block__what-we-do,
+.footer-block__faq,
+.footer-block__career,
+.footrt-block__blog,
+.footer-block__contact-us {
+    color: var(--clr-neutral-very-pale-cyan);
+    font-family: var(--ff-primary);
+}
+
+.footer-block__about-us {
+    margin-top: 3rem;
+}
+
+.footrt-block__contact-us {
+    margin-bottom: 4rem;
+}
+
+.footer-block-social-component {
+    margin-bottom: 1.5rem;
+    justify-self: center;
+}
+
+.footer-block-social-component {
+    display: grid;
+    grid-template-columns: repeat(3, 3.5rem);
+    grid-template-areas: 
+        "footer-block-social-component__fb-icon footer-block-social-component__twitter-icon footer-block-social-component__instagram-icon";
+}
+
+.footer-block-social-component__fb-icon,
+.footer-block-social-component__twitter-icon,
+.footer-block-social-component__instagram-icon {
+    width: 2.5rem;
+    height: 2.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 0.1rem solid var(--white);
+    border-radius: 50%;
+}
+
+.footer-block-social-component__fb-icon > img {
+    width: 35%;
+    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
+}
+
+.footer-block-social-component__twitter-icon > img,
+.footer-block-social-component__instagram-icon > img {
+    width: 50%;
+    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%); 
+}
+
+.footer-block__copyright {
+    color: var(--clr-neutral-very-pale-cyan);
+    margin: 0 auto;
+    font-family: var(--ff-primary);
+    font-size: 1.2rem;
+}
+
+/* desktop second approach */
+
