--- a/css/style.css
+++ b/css/style.css
@@ -448,47 +448,54 @@ p {
     .footer-block {
         grid-template-columns: 1.8fr 0.5fr 0.5fr 1.2fr;
         grid-template-areas:
-            "footer-block__trial-info footer-block__trial-info footer-block__trial-info footer-block__trial-info"
-            "footer-block__company-logo . . ."
-            "footer-block__loocation-details footer6-block__about-us footer-block__career 6footer-block__social-component"
-            "footer-block__loocation-details footer-block__what-we-do footer-block__blog ."
-            "footer-bl6ock__phone-details footer-block__faq footer-block__contact-us ."
-            "footer-block__email-details . . ."
-            ". . . footer-block__copyright";
-            grid-template-rows: auto auto 3.5rem 3.5rem 3.5rem auto auto;
-            gap: 1rem 12rem;
-            padding: 0 10rem 6rem 10rem;
-    }
-
-    .footer-block__trial-info {
+          "footer-block__trial-info footer-block__trial-info footer-block__trial-info footer-block__trial-info"
+          "footer-block__company-logo . . ."
+          "footer-block__location-details footer-block__about-us footer-block__career footer-block-social-component"
+          "footer-block__location-details footer-block__what-we-do footer-block__blog ."
+          "footer-block__phone-details footer-block__faq footer-block__contact-us ."
+          "footer-block__email-details . . . "
+          ". . . footer-block__copyright";
+        grid-template-rows: auto auto 3.5rem 3.5rem 3.5rem auto auto;
+        gap: 1rem 12rem;
+    
+        padding: 0 10rem 6rem 10rem;
+      }
+    
+      .footer-block__trial-info {
         width: 65%;
         margin: 0 auto 8rem auto;
         padding: 6rem 0;
-    }
-
-    .footer-block-trial-info__title {
+      }
+    
+      .footer-block-trial-info__title {
         font-size: 3rem;
-    }
-
-    .footer-block-trial-info__button {
+      }
+    
+      .footer-block-trial-info__button {
         width: 45%;
         padding: 2.5rem 0;
         font-size: 1.6rem;
         border-radius: 5rem;
         font-family: var(--ff-secondary);
-    }
-
-    .footer-block__company-logo {
+      }
+    
+      .footer-block__company-logo {
         margin-bottom: 2.5rem;
-    }
-
-    .footer-block__about-us,
-    .footer-block__contact-us,
-    .footer-block__phone-details,
-    .footer-block__email-detaills {
+      }
+    
+      .footer-block__about-us,
+      .footer-block__contact-us,
+      .footer-block__phone-details,
+      .footer-block__email-details {
         /* reset margin from mobile layout */
         margin: 0;
-    }
+      }
+    
+      .footer-block-social-component {
+        justify-self: start;
+        /* reset margin from mobile layout */
+        margin: 0;
+      }
 }
 
 /* grid area names */
@@ -577,3 +584,104 @@ p {
     grid-area: your-users-block__feature-info;
 }
 
+/* component */
+
+.footer-block {
+    grid-area: footer-block;
+}
+
+.footer-block__trial-info {
+    grid-area: footer-block__trial-info;
+}
+
+.footer-block-trial-info__title {
+    grid-area: footer-block-trial-info__title;
+}
+
+.footer-block-trial-info__button {
+    grid-area: footer-block-trial-info__button;
+}
+
+.footer-block__company-logo {
+    grid-area: footer-block__company-logo;
+}
+
+.footer-block__location-details {
+    grid-area: footer-block__location-details;
+}
+
+.footer-block-location-details__icon {
+    grid-area: footer-block-location-details__icon;
+}
+
+.footer-block-location-details__info {
+    grid-area: footer-block-location-details__info;
+}
+
+.footer-block__phone-details {
+    grid-area: footer-block__phone-details;
+}
+
+.footer-block-phone-details__icon {
+    grid-area: footer-block-phone-details__icon;
+}
+
+.footer-block-phone-details__info {
+    grid-area: footer-block-phone-details__info;
+}
+
+.footer-block__email-details {
+    grid-area: footer-block__email-details;
+}
+
+.footer-block-email-details__icon {
+    grid-area: footer-block-email-details__icon;
+}
+
+.footer-block-email-details__info {
+    grid-area: footer-block-email-details__info;
+}
+
+.footer-block__about-us {
+    grid-area: footer-block__about-us;
+}
+
+.footer-block__what-we-do {
+    grid-area: footer-block__what-we-do;
+}
+
+.footer-block__faq {
+    grid-area: footer-block__faq;
+}
+
+.footer-block__career {
+    grid-area: footer-block__career;
+}
+
+.footer-block__blog {
+    grid-area: footer-block__blog;
+}
+
+.footer-block__contact-us {
+    grid-area: footer-block__contact-us;
+}
+
+.footer-block__copyright {
+    grid-area: footer-block__copyright;
+}
+
+.footer-block-social-component {
+    grid-area: footer-block-social-component;
+}
+
+.footer-block-social-component__fb-icon {
+    grid-area: footer-block-social-component__fb-icon;
+}
+
+.footer-block-social-component__twitter-icon {
+    grid-area: footer-block-social-component__twitter-icon;
+}
+
+.footer-block-social-component__instagram-icon {
+    grid-area: footer-block-social-component__instagram-icon;
+}
